--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,9 @@
 <footer>
-  
+  <a href="{{ site.baseurl }}"></a>
+  <ul>
+    <li><a href="{{ site.baseurl }}">Services</a></li>
+    <li><a href="{{ site.baseurl }}">Case Stuides</a></li>
+    <li><a href="{{ site.baseurl }}">Resources</a></li>
+    <li><a href="{{ site.baseurl }}">Our Company</a></li>
+  </ul>
 </footer>
