improve the home page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,4 @@
-<footer>
-  <a href="{{ site.baseurl }}"></a>
-  <ul>
-    <li><a href="{{ site.baseurl }}">Services</a></li>
-    <li><a href="{{ site.baseurl }}">Case Stuides</a></li>
-    <li><a href="{{ site.baseurl }}">Resources</a></li>
-    <li><a href="{{ site.baseurl }}">Our Company</a></li>
-  </ul>
+<hr>
+<footer id="main-footer">
+  <p>Copyright &copy; 2021 Gawasoft</p>
 </footer>
