--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,11 @@
-<nav>
-  <a href="{{ site.baseurl }}"></a>
-  <ul>
-    <li><a href="{{ site.baseurl }}">Services</a></li>
-    <li><a href="{{ site.baseurl }}">Case Stuides</a></li>
-    <li><a href="{{ site.baseurl }}">Resources</a></li>
-    <li><a href="{{ site.baseurl }}">Our Company</a></li>
-  </ul>
+ <nav id="navbar">
+  <div class="container">
+    <a href="{{ site.baseurl }}">gawasoft</a>
+    <ul>
+      <li><a href="{{ site.baseurl }}">Services</a></li>
+      <li><a href="{{ site.baseurl }}">Case Stuides</a></li>
+      <li><a href="{{ site.baseurl }}">Resources</a></li>
+      <li><a href="{{ site.baseurl }}">Our Company</a></li>
+    </ul>
+  </div>
 </nav>
-<hr>
