--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -52,7 +52,7 @@ body{
 #showcase{
 	background-image:url('/assets/images/showcase.jpg');
 	background-position:center right;
-	min-height:300px;
+	min-height:400px;
 	margin-bottom:30px;
 	text-align: center;
 }
@@ -68,7 +68,7 @@ body{
 #main{
 	float:left;
 	width:70%;
-	padding:0 30px;
+	padding:0 30px 0;
 	box-sizing: border-box;
 }
 
