--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,8 @@
  <nav id="navbar">
   <div class="container">
-    <a href="{{ site.baseurl }}">gawasoft</a>
     <ul>
-      <li><a href="{{ site.baseurl }}">Services</a></li>
+      <li><a href="{{ site.services }}"><strong>gawasoft</strong></a></li>
+      <li><a href="{{ site.services }}">Services</a></li>
       <li><a href="{{ site.baseurl }}">Case Stuides</a></li>
       <li><a href="{{ site.baseurl }}">Resources</a></li>
       <li><a href="{{ site.baseurl }}">Our Company</a></li>
