--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -47,6 +47,8 @@ body{
 	background-color: $clr-orange;
 	border-radius: 100rem;
 	color: $clr-white;
+	cursor: pointer;
+  padding: 1rem 1.75rem;
 }
 /* showcase */
 #showcase{
